Light instances dissapears in rendered viewport (Blender Internal) #40566

Closed
opened 2014-06-10 18:31:12 +02:00 by Maverick · 8 comments

System Information
win 8 64bit gtx titan i7

Blender Version
blender-2.70-fce731a-win64-vc9

Short description of error
A light is part of a Group and you create an instance of that Group.
You then switch to rendered viewport and the light on the instance works.

As soon as you rotate the viewport with the mouse the instanced light is no longer evaluated.

Exact steps for others to reproduce the error
Check the attached file.

Thank you

**System Information** win 8 64bit gtx titan i7 **Blender Version** blender-2.70-fce731a-win64-vc9 **Short description of error** A light is part of a Group and you create an instance of that Group. You then switch to rendered viewport and the light on the instance works. As soon as you rotate the viewport with the mouse the instanced light is no longer evaluated. **Exact steps for others to reproduce the error** Check the attached file. Thank you
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie
Author
[shit_z_then_rotate_viewport_light_dissapears_bug.blend](https://archive.blender.org/developer/F93776/shit_z_then_rotate_viewport_light_dissapears_bug.blend)

Added subscriber: @mont29

Added subscriber: @mont29

Not a regression (same behavior in official 2.70a at least)…

Not a regression (same behavior in official 2.70a at least)…
Sergey Sharybin self-assigned this 2014-07-21 17:36:32 +02:00

This issue was referenced by e5fd5599bc

This issue was referenced by e5fd5599bc53183b3c919e9644ea6fd1eaa399e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e5fd5599bc.

Closed by commit e5fd5599bc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40566
No description provided.